add jquery with webpack

--- a/front-end/MathFront/src/main/web/index.html
+++ b/front-end/MathFront/src/main/web/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>KotlinConf web client</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Kotlin js exemplo</title>
 </head>
 <body>
 <div id="content"></div>
